[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "norman-objects"
description = "norman objects common classes"
version = "0.0.1"
authors = [
    {name = "Norman Artificial Intelligence LTD", email = "yonatan.alon@norman-ai.com"},
]

requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic==2.11.7"
]

[tools.setuptools]
packages = ["norman_objects"]
